--- a/style/styles.css
+++ b/style/styles.css
@@ -1,7 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@500;700&display=swap");
+.hidden {
+  display: none; }
+
+* {
+  box-sizing: border-box; }
+
 body {
   background-color: #effafa;
-  font-family: 'Spartan', sans-serif; }
+  font-family: 'Spartan', sans-serif;
+  margin: 0; }
 
 header {
   position: absolute;
@@ -14,11 +21,51 @@ header {
     background-repeat: no-repeat;
     background-size: cover; }
 
-.l-item ul {
-  list-style: none; }
-  .l-item ul li, .l-item ul li > p {
-    display: inline; }
-
-.l-item__tags > ul > li {
+.h-tag {
   padding: 0.8rem 1rem;
   background-color: #eef6f6; }
+
+main {
+  margin: 10rem 0;
+  padding: 4rem 1rem 1rem 1rem;
+  position: relative;
+  width: 100%; }
+
+.l-table {
+  margin: 0 auto;
+  width: calc(100vw - 2rem);
+  max-width: 65rem; }
+
+.l-item {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between; }
+  .l-item ul {
+    list-style: none; }
+    .l-item ul li, .l-item ul li > p {
+      display: inline; }
+  .l-item__logo {
+    grid-area: logo;
+    height: 5rem;
+    width: 5rem; }
+    .l-item__logo img {
+      width: 100%; }
+  .l-item__row .row1 {
+    grid-area: company; }
+  .l-item__row .row2 {
+    grid-area: position; }
+  .l-item__row .row3 {
+    grid-area: details; }
+  .l-item__detail {
+    display: grid;
+    grid-template-columns: 5rem auto;
+    grid-template-rows: auto;
+    grid-template-areas: "logo company" "logo position" "logo details";
+    width: 35%; }
+  .l-item__tags {
+    display: flex;
+    width: 45%; }
+
+.c-card {
+  background-color: white;
+  border-radius: 0.5rem; }
