--- a/style/styles.scss
+++ b/style/styles.scss
@@ -4,6 +4,8 @@ $color-primary: hsl(178, 29%, 50%);
 $color-secondary: hsl(180, 14%, 20%);
 $color-primary--light: hsl(180, 31%, 95%);
 $color-neutral: hsl(180, 52%, 96%);
+$color-neutral--light: hsl(152, 1%, 53%);
+$color-neutral--dark: hsl(174, 14%, 20%);
 
 .hidden {
   display: none;
@@ -34,11 +36,6 @@ header {
   }
 }
 
-.h-tag {
-  padding: 0.8rem 1rem;
-  background-color: $color-primary--light;
-}
-
 main {
   margin: 10rem 0;
   padding: 4rem 1rem 1rem 1rem;
@@ -47,18 +44,19 @@ main {
 }
 
 .l-table {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.8rem;
   margin: 0 auto;
   width: calc(100vw - 2rem);
   max-width: 65rem;
 }
 
 .l-item {
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
 
   ul {
     list-style: none;
+    padding: 0;
 
     li, li>p {
       display: inline;
@@ -67,8 +65,8 @@ main {
 
   &__logo {
     grid-area: logo;
-    height: 5rem;
-    width: 5rem;
+    height: 5.5rem;
+    width: 5.5rem;
 
     img {
       width: 100%;
@@ -76,34 +74,54 @@ main {
   }
 
   &__row {
-    .row1 {
+    &.row1 {
       grid-area: company;
+
+      h2, p {
+        display: inline;
+      }
     }
-    .row2 {
+    &.row2 {
       grid-area: position;
+
+      h1 {
+        margin: 0;
+      }
     }
-    .row3 {
+    &.row3 {
       grid-area: details;
+      margin: 0;
     }
   }
 
   &__detail {
     display: grid;
-    grid-template-columns: 5rem auto;
-    grid-template-rows: auto;
+    align-items: center;
+    grid-template-columns: 5.5rem auto;
+    grid-template-rows: 2em 2.5em 1em;
     grid-template-areas:
       "logo company"
       "logo position"
       "logo details";
-    width: 35%;
-
-    &>ul {}
-  }
-  &__tags {
-    display: flex;
-    width: 45%;
+    column-gap: 1.5rem;
+    width: 50%;
 
     >ul {
+
+    }
+  }
+  &__tags {
+    width: 50%;
+    margin: auto;
+
+    >ul {
+      display: flex;
+      justify-content: flex-end;
+      column-gap: 1rem;
+      padding: 0;
+      margin: 0;
+      text-align: right;
+
       >li {}
     }
   }
@@ -113,13 +131,84 @@ main {
 .c-card {
   background-color: white;
   border-radius: 0.5rem;
+  box-shadow: 1rem 1rem 3rem rgba($color-primary, 0.35);
+  padding: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 
-  &__company {}
-  &__new {}
-  &__featured {}
-  &__position {}
+  .details {
+    >li {
+      color: $color-neutral--light;
+      font-size: 0.8em;
+      &:after {
+        content: " \00b7";
+      }
+
+      &:last-child:after {
+        content: none;
+      }
+    }
+  }
+
+  &__company, &__new, &__featured {
+    margin: 0 0.3em;
+  }
+
+  &__company {
+    color: $color-primary;
+    font-size: 0.9em;
+  }
+  &__new {
+    border-radius: 99px;
+    padding: 1em 0.9em 0.8em 1em;
+    color: $color-neutral;
+    background-color: $color-primary;
+    font-size: 0.6em;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+  &__featured {
+    border-radius: 99px;
+    padding: 1em 0.9em 0.8em 1em;
+    color: $color-neutral;
+    background-color: $color-neutral--dark;
+    font-size: 0.6em;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+  &__position {
+    font-size: 1.1em;
+
+    &:hover {
+      cursor: pointer;
+      color: $color-primary;
+    }
+  }
   &__postedAt {}
   &__contract {}
   &__location {}
-  &__tags{}
+  &__tags{
+    width: 100%;
+  }
+
+  .c-tag {
+    border-radius: 0.25rem;
+    padding: 0.4rem 0.6rem;
+    color: $color-primary;
+    background-color: $color-primary--light;
+    font-size: 0.8em;
+    font-weight: 700;
+
+    &:hover {
+      cursor: pointer;
+      color: $color-primary--light;
+      background-color: $color-primary;
+    }
+  }
+
+  &.featured {
+    border-left: 0.5rem solid $color-primary;
+    padding-left: 1.5rem;
+  }
 }
