--- a/style/styles.css
+++ b/style/styles.css
@@ -34,6 +34,9 @@ main {
   margin: 0 auto;
   width: calc(100vw - 2rem);
   max-width: 65rem; }
+  @media (max-width: 768px) {
+    .l-table {
+      row-gap: 2.8rem; } }
 
 .l-item ul {
   list-style: none;
@@ -45,6 +48,10 @@ main {
   grid-area: logo;
   height: 5.5rem;
   width: 5.5rem; }
+  @media (max-width: 768px) {
+    .l-item__logo {
+      height: 4rem;
+      width: 4rem; } }
   .l-item__logo img {
     width: 100%; }
 
@@ -70,17 +77,23 @@ main {
   grid-template-areas: "logo company" "logo position" "logo details";
   column-gap: 1.5rem;
   width: 50%; }
+  @media (max-width: 768px) {
+    .l-item__detail {
+      grid-template-columns: 1fr;
+      grid-template-rows: 4rem 2em 2.5em 1em;
+      grid-template-areas: "logo" "company" "position" "details";
+      row-gap: 0.5rem;
+      width: 100%;
+      margin-top: -3.5rem; } }
 
 .l-item__tags {
   width: 50%;
   margin: auto; }
-  .l-item__tags > ul {
-    display: flex;
-    justify-content: flex-end;
-    column-gap: 1rem;
-    padding: 0;
-    margin: 0;
-    text-align: right; }
+  @media (max-width: 768px) {
+    .l-item__tags {
+      width: 100%;
+      margin-top: 1.5rem;
+      border-top: 1px solid #868887; } }
 
 .c-card {
   background-color: white;
@@ -90,6 +103,9 @@ main {
   width: 100%;
   display: flex;
   justify-content: space-between; }
+  @media (max-width: 768px) {
+    .c-card {
+      flex-direction: column; } }
   .c-card .details > li {
     color: #868887;
     font-size: 0.8em; }
@@ -124,14 +140,26 @@ main {
       cursor: pointer;
       color: #5ba4a2; }
   .c-card__tags {
+    display: flex;
+    justify-content: flex-end;
+    column-gap: 1rem;
+    padding: 0;
+    margin: 0;
+    text-align: right;
     width: 100%; }
+    @media (max-width: 768px) {
+      .c-card__tags {
+        margin-top: 1.5rem;
+        flex-wrap: wrap;
+        justify-content: flex-start; } }
   .c-card .c-tag {
     border-radius: 0.25rem;
     padding: 0.4rem 0.6rem;
     color: #5ba4a2;
     background-color: #eef6f6;
     font-size: 0.8em;
-    font-weight: 700; }
+    font-weight: 700;
+    margin: 0.5rem auto; }
     .c-card .c-tag:hover {
       cursor: pointer;
       color: #eef6f6;
