--- a/style/styles.scss
+++ b/style/styles.scss
@@ -7,6 +7,8 @@ $color-neutral: hsl(180, 52%, 96%);
 $color-neutral--light: hsl(152, 1%, 53%);
 $color-neutral--dark: hsl(174, 14%, 20%);
 
+$device-sm: 'max-width: 768px';
+
 .hidden {
   display: none;
 }
@@ -50,6 +52,10 @@ main {
   margin: 0 auto;
   width: calc(100vw - 2rem);
   max-width: 65rem;
+
+  @media ($device-sm) {
+    row-gap: 2.8rem;
+  }
 }
 
 .l-item {
@@ -67,6 +73,11 @@ main {
     grid-area: logo;
     height: 5.5rem;
     width: 5.5rem;
+
+    @media ($device-sm) {
+      height: 4rem;
+      width: 4rem;
+    }
 
     img {
       width: 100%;
@@ -106,22 +117,32 @@ main {
     column-gap: 1.5rem;
     width: 50%;
 
-    >ul {
-
+    @media ($device-sm) {
+      grid-template-columns: 1fr;
+      grid-template-rows: 4rem 2em 2.5em 1em;
+      grid-template-areas:
+        "logo"
+        "company"
+        "position"
+        "details";
+      row-gap: 0.5rem;
+      width: 100%;
+      margin-top: -3.5rem;
     }
+
+    >ul {}
   }
   &__tags {
     width: 50%;
     margin: auto;
 
-    >ul {
-      display: flex;
-      justify-content: flex-end;
-      column-gap: 1rem;
-      padding: 0;
-      margin: 0;
-      text-align: right;
+    @media ($device-sm) {
+      width: 100%;
+        margin-top: 1.5rem;
+        border-top: 1px solid $color-neutral--light;
+    }
 
+    >ul {
       >li {}
     }
   }
@@ -136,6 +157,10 @@ main {
   width: 100%;
   display: flex;
   justify-content: space-between;
+
+  @media ($device-sm) {
+    flex-direction: column;
+  }
 
   .details {
     >li {
@@ -189,7 +214,19 @@ main {
   &__contract {}
   &__location {}
   &__tags{
+    display: flex;
+    justify-content: flex-end;
+    column-gap: 1rem;
+    padding: 0;
+    margin: 0;
+    text-align: right;
     width: 100%;
+
+    @media ($device-sm) {
+      margin-top: 1.5rem;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
   }
 
   .c-tag {
@@ -199,6 +236,7 @@ main {
     background-color: $color-primary--light;
     font-size: 0.8em;
     font-weight: 700;
+    margin: 0.5rem auto;
 
     &:hover {
       cursor: pointer;
