--- a/style/styles.css
+++ b/style/styles.css
@@ -30,12 +30,14 @@ main {
 .l-table {
   display: flex;
   flex-direction: column;
+  grid-row-gap: 1.8rem;
   row-gap: 1.8rem;
   margin: 0 auto;
   width: calc(100vw - 2rem);
   max-width: 65rem; }
   @media (max-width: 768px) {
     .l-table {
+      grid-row-gap: 2.8rem;
       row-gap: 2.8rem; } }
 
 .l-item ul {
@@ -82,6 +84,7 @@ main {
       grid-template-columns: 1fr;
       grid-template-rows: 4rem 2em 2.5em 1em;
       grid-template-areas: "logo" "company" "position" "details";
+      grid-row-gap: 0.5rem;
       row-gap: 0.5rem;
       width: 100%;
       margin-top: -3.5rem; } }
