--- a/style/styles.scss
+++ b/style/styles.scss
@@ -48,12 +48,14 @@ main {
 .l-table {
   display: flex;
   flex-direction: column;
+  grid-row-gap: 1.8rem;
   row-gap: 1.8rem;
   margin: 0 auto;
   width: calc(100vw - 2rem);
   max-width: 65rem;
 
   @media ($device-sm) {
+    grid-row-gap: 2.8rem;
     row-gap: 2.8rem;
   }
 }
@@ -125,6 +127,7 @@ main {
         "company"
         "position"
         "details";
+      grid-row-gap: 0.5rem;
       row-gap: 0.5rem;
       width: 100%;
       margin-top: -3.5rem;
