--- a/style/styles.css
+++ b/style/styles.css
@@ -43,11 +43,12 @@ main {
     list-style: none;
     border-radius: 0.5rem;
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-start;
     padding: 1rem 2rem; }
     .list-filters ul li {
       display: flex;
-      margin: 0 0.5rem; }
+      margin: 0.5rem 0.5rem; }
       .list-filters ul li .filter-label {
         border-radius: 0.25rem 0 0 0.25rem;
         padding: 0.4rem 0.6rem;
