--- a/style/styles.scss
+++ b/style/styles.scss
@@ -67,12 +67,13 @@ main {
 
     border-radius: 0.5rem;
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-start;
     padding: 1rem 2rem;
 
     li {
       display: flex;
-      margin: 0 0.5rem;
+      margin: 0.5rem 0.5rem;
 
       .filter-label {
         border-radius: 0.25rem 0 0 0.25rem;
