--- a/style/styles.scss
+++ b/style/styles.scss
@@ -64,6 +64,7 @@ main {
 
     background-color: white;
     list-style: none;
+    box-shadow: 1rem 1rem 3rem rgba($color-primary, 0.35);
 
     border-radius: 0.5rem;
     display: flex;
