--- a/style/styles.css
+++ b/style/styles.css
@@ -6,7 +6,8 @@
   box-sizing: border-box; }
 
 html {
-  font-size: 16px; }
+  font-size: 16px;
+  visibility: hidden; }
 
 body {
   background-color: #effafa;
@@ -32,21 +33,24 @@ main {
   max-width: 65rem; }
 
 .list-filters {
-  display: none;
+  background-color: white;
+  box-shadow: 1rem 1rem 3rem rgba(91, 164, 162, 0.35);
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem;
   margin-bottom: 2.65rem;
   width: 100%; }
   @media (max-width: 768px) {
     .list-filters {
       margin-bottom: 2.5rem; } }
   .list-filters ul {
-    background-color: white;
     list-style: none;
-    box-shadow: 1rem 1rem 3rem rgba(91, 164, 162, 0.35);
-    border-radius: 0.5rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    padding: 1rem 2rem; }
+    padding: 0;
+    margin: 0; }
     .list-filters ul li {
       display: flex;
       margin: 0.5rem 0.5rem; }
@@ -70,6 +74,16 @@ main {
         .list-filters ul li .close:hover {
           background-color: #2c3a39;
           cursor: pointer; }
+
+.clear-filters {
+  color: #5ba4a2;
+  font-size: 1rem;
+  text-decoration: underline;
+  display: absolute;
+  right: 0;
+  align-self: center; }
+  .clear-filters:hover {
+    cursor: pointer; }
 
 .spacer-filters {
   display: none;
